    git-annex remotedaemon is killed while locking a key to prevent its
    removal.
  * When proxying a download from a special remote, avoid unncessary hashing.
  * When proxying an upload to a special remote, verify the hash.
  * Propagate --force to git-annex transferrer.
  * Added a build flag for servant, enabling annex+http urls and 
    git-annex p2phttp.
  * Added a dependency on clock.

 -- Joey Hess <id@joeyh.name>  Tue, 02 Jul 2024 12:14:53 -0400

git-annex (10.20240701) upstream; urgency=medium

  * git-annex remotes can now act as proxies that provide access to
    their remotes. Configure this with remote.name.annex-proxy
    and the git-annex update proxy command.
  * Clusters are now supported. These are collections of nodes that can
    be accessed as a single entity, accessed by one or more gateway
    repositories.
  * Added git-annex initcluster, updatecluster, and extendcluster commands.
  * Fix a bug where interrupting git-annex while it is updating the
    git-annex branch for an export could later lead to git fsck
    complaining about missing tree objects.
  * Tab completion of options like --from now includes special remotes,
    as well as proxied remotes and clusters.
  * Tab completion of many commands like info and trust now includes
    remotes.
  * P2P protocol version 2.
  * Fix Windows build with Win32 2.13.4+
    Thanks, Oleg Tolmatcev
  * When --debugfilter or annex.debugfilter is set, avoid propigating
    debug output from git-annex-shell, since it cannot be filtered.

 -- Joey Hess <id@joeyh.name>  Mon, 01 Jul 2024 15:11:48 -0400

git-annex (10.20240531) upstream; urgency=medium

  * git-remote-annex: New program which allows pushing a git repo to a
    git-annex special remote, and cloning from a special remote.
    (Based on Michael Hanke's git-remote-datalad-annex.)
  * initremote, enableremote: Added --with-url to enable using
    git-remote-annex.
  * When building an adjusted unlocked branch, make pointer files