@@ -1,29 +1,0 @@
-flags:
-  git-annex:
-    production: true
-    parallelbuild: true
-    assistant: true
-    pairing: true
-    torrentparser: true
-    magicmime: false
-    dbus: false
-    debuglocks: false
-    benchmark: true
-    crypton: false
-    servant: false
-packages:
-- '.'
-resolver: lts-18.13
-extra-deps:
-- IfElse-0.85
-- aws-0.22
-- bloomfilter-2.0.1.0
-- git-lfs-1.2.0
-- http-client-restricted-0.0.4
-- network-multicast-0.3.2
-- sandi-0.5
-- torrent-10000.1.1
-- base16-bytestring-0.1.1.7
-- base64-bytestring-1.0.0.3
-- bencode-0.6.1.1
-- http-client-0.7.9
